add project and experience

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         </figure>
                     </div>
                     
-                    <p>Saya merupakan lulusan baru Politeknik Negeri Jakarta program studi Teknik Multimedia Digital. Saya memiliki pengalaman magang di Westep Project. Selama magang saya berhasil membuat desain untuk kebutuhan feed Instagram, mendesain website, dan editing video untuk kebutuhan konten Tiktok. Saya mampu mengoperasikan software seperti Photoshop, Illustrator, Figma, Corel-Draw, Adobe XD, dan saya memiliki kemampuan beberapa bahasa seperti HTML, SCSS, dan CSS.</p>
+                    <p>Saya merupakan lulusan baru Politeknik Negeri Jakarta program studi Teknik Multimedia Digital. Saya memiliki pengalaman magang di Westep Project. Selama magang saya berhasil membuat desain untuk kebutuhan feed Instagram, mendesain website, dan editing video untuk kebutuhan konten Tiktok. Saya mampu mengoperasikan software seperti Photoshop, Illustrator, Figma, Corel-Draw, Adobe XD, dan saya memiliki kemampuan beberapa bahasa web seperti HTML, SCSS, dan CSS.</p>
                 </section>
 
                 <!-- service start -->
@@ -299,6 +299,41 @@
                     </div>
 
                     <ol class="timeline-list">
+                        <!-- start timeline item -->
+                        <li class="timeline-item">
+                            <h4 class="h4 timeline-item-title">PT. SAMCGI Indonesia -
+                                <span class="h4 timeline-item-title">Contract</span>
+                            </h4>
+                            <span>2023 - 2024 (3 Bulan)</span>
+                            
+                            <ol class="work-list">
+                                <!-- start work item -->
+                                <li class="work-item">
+                                    <p class="timeline-text">
+                                        Merancang cover annual report dan sustainability report untuk kebutuhan klien
+                                    </p>
+                                </li>
+                                <!-- end work item -->
+
+                                <!-- start work item -->
+                                <li class="work-item">
+                                    <p class="timeline-text">
+                                        Layouting konten annual report dan sustainability report
+                                    </p>
+                                </li>
+                                <!-- end work item -->
+
+                                <!-- start work item -->
+                                <li class="work-item">
+                                    <p class="timeline-text">
+                                        Melakukan retouching foto untuk kebutuhan annual report dan sustainability report
+                                    </p>
+                                </li>
+                                <!-- end work item -->
+                            </ol>
+                        </li>
+                        <!-- end timeline item -->
+
                         <!-- start timeline item -->
                         <li class="timeline-item">
                             <h4 class="h4 timeline-item-title">Westep Project -
@@ -916,6 +951,171 @@
                                     <img src="img/project/menu-burger.jpg" alt="" loading="lazy">
                                 </figure>
                                 <h3 class="project-title">Menu Burger Nusantara</h3>
+                                <p class="project-category">InDesign</p>
+                            </a>
+                        </li>
+                        <!-- Project Item End -->
+
+                        <!-- Project Item Start -->
+                        <li class="project-item active" data-filter-item data-category="indesign">
+                            <a href="https://drive.google.com/drive/folders/1AHFdKUdwD2aPtmpfia8bqihFpeVsem5z?usp=sharing" target="_blank">
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="navigate-outline"></ion-icon>
+                                    </div>
+                                    <img src="img/project/indesign/[HKA]_ARSR23_Cover-AR.jpg" alt="" loading="lazy">
+                                </figure>
+                                <h3 class="project-title">Cover HKA Annual Report 2023</h3>
+                                <p class="project-category">InDesign</p>
+                            </a>
+                        </li>
+                        <!-- Project Item End -->
+
+                        <!-- Project Item Start -->
+                        <li class="project-item active" data-filter-item data-category="indesign">
+                            <a href="https://drive.google.com/drive/folders/1lmky5sWvQdd8FNyEW8s9TUOYtBiJqOHH?usp=sharing" target="_blank">
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="navigate-outline"></ion-icon>
+                                    </div>
+                                    <img src="img/project/indesign/[HKA]_ARSR23_Cover-SR.jpg" alt="" loading="lazy">
+                                </figure>
+                                <h3 class="project-title">Cover HKA Sustainability Report 2023</h3>
+                                <p class="project-category">InDesign</p>
+                            </a>
+                        </li>
+                        <!-- Project Item End -->
+
+                        <!-- Project Item Start -->
+                        <li class="project-item active" data-filter-item data-category="indesign">
+                            <a href="https://drive.google.com/drive/folders/1MMG6jaJjqaOD5HNYXUvkZJH27585KZ7Q?usp=sharing" target="_blank">
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="navigate-outline"></ion-icon>
+                                    </div>
+                                    <img src="img/project/indesign/[KALOG]_AR 2023_Cover.jpg" alt="" loading="lazy">
+                                </figure>
+                                <h3 class="project-title">Cover KALOG Annual Report 2023</h3>
+                                <p class="project-category">InDesign</p>
+                            </a>
+                        </li>
+                        <!-- Project Item End -->
+
+                         <!-- Project Item Start -->
+                         <li class="project-item active" data-filter-item data-category="indesign">
+                            <a href="https://drive.google.com/drive/folders/1XmMYaqpsWz-eY5YjCrZFA9ud41V1tDuw?usp=sharing" target="_blank">
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="navigate-outline"></ion-icon>
+                                    </div>
+                                    <img src="img/project/indesign/[KBBS]_Cover-AR (1).jpg" alt="" loading="lazy">
+                                </figure>
+                                <h3 class="project-title">Cover Bukopin Syariah Annual Report 2023</h3>
+                                <p class="project-category">InDesign</p>
+                            </a>
+                        </li>
+                        <!-- Project Item End -->
+
+                        <!-- Project Item Start -->
+                        <li class="project-item active" data-filter-item data-category="indesign">
+                            <a href="https://drive.google.com/drive/folders/1_lhi4khI2twePGSef3zMIT9CyKyFNxq0?usp=sharing" target="_blank">
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="navigate-outline"></ion-icon>
+                                    </div>
+                                    <img src="img/project/indesign/[KBBS]_Cover-AR.jpg" alt="" loading="lazy">
+                                </figure>
+                                <h3 class="project-title">Cover Bukopin Syariah Annual Report 2023</h3>
+                                <p class="project-category">InDesign</p>
+                            </a>
+                        </li>
+                        <!-- Project Item End -->
+
+                        <!-- Project Item Start -->
+                        <li class="project-item active" data-filter-item data-category="indesign">
+                            <a href="https://drive.google.com/drive/folders/1ByZTScVE6NxqXzMggmdLL1XZt_wj8gYE?usp=sharing" target="_blank">
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="navigate-outline"></ion-icon>
+                                    </div>
+                                    <img src="img/project/indesign/[KBBS]_Cover-PJP (1).jpg" alt="" loading="lazy">
+                                </figure>
+                                <h3 class="project-title">Cover Bukopin Syariah PJP 2023</h3>
+                                <p class="project-category">InDesign</p>
+                            </a>
+                        </li>
+                        <!-- Project Item End -->
+
+                        <!-- Project Item Start -->
+                        <li class="project-item active" data-filter-item data-category="indesign">
+                            <a href="https://drive.google.com/drive/folders/1XWKt-sqoLT3oW4lK9x-YbPjS2REt45wZ?usp=sharing" target="_blank">
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="navigate-outline"></ion-icon>
+                                    </div>
+                                    <img src="img/project/indesign/[KBBS]_Cover-PJP.jpg" alt="" loading="lazy">
+                                </figure>
+                                <h3 class="project-title">Cover Bukopin Syariah PJP 2023</h3>
+                                <p class="project-category">InDesign</p>
+                            </a>
+                        </li>
+                        <!-- Project Item End -->
+
+                        <!-- Project Item Start -->
+                        <li class="project-item active" data-filter-item data-category="indesign">
+                            <a href="https://drive.google.com/drive/folders/1VnlVxfJttT-pEsIgofaCeHAne0p9f1PY?usp=sharing" target="_blank">
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="navigate-outline"></ion-icon>
+                                    </div>
+                                    <img src="img/project/indesign/[KBBS]_Cover-SR (1).jpg" alt="" loading="lazy">
+                                </figure>
+                                <h3 class="project-title">Cover Bukopin Syariah Sustainability Report 2023</h3>
+                                <p class="project-category">InDesign</p>
+                            </a>
+                        </li>
+                        <!-- Project Item End -->
+
+                        <!-- Project Item Start -->
+                        <li class="project-item active" data-filter-item data-category="indesign">
+                            <a href="https://drive.google.com/drive/folders/1dpumtdIvZt7HA6c5K_SSXWSilOWymuZZ?usp=sharing" target="_blank">
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="navigate-outline"></ion-icon>
+                                    </div>
+                                    <img src="img/project/indesign/[KBBS]_Cover-SR.jpg" alt="" loading="lazy">
+                                </figure>
+                                <h3 class="project-title">Cover Bukopin Syariah Sustainability Report 2023</h3>
+                                <p class="project-category">InDesign</p>
+                            </a>
+                        </li>
+                        <!-- Project Item End -->
+
+                        <!-- Project Item Start -->
+                        <li class="project-item active" data-filter-item data-category="indesign">
+                            <a href="https://drive.google.com/drive/folders/1W_OkCkzLISbUjiEpVPhQDQ5YNcGEfplh?usp=sharing" target="_blank">
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="navigate-outline"></ion-icon>
+                                    </div>
+                                    <img src="img/project/indesign/[MMP]_ARSR23_Cover-2.jpg" alt="" loading="lazy">
+                                </figure>
+                                <h3 class="project-title">Cover MM Annual Report 2023</h3>
+                                <p class="project-category">InDesign</p>
+                            </a>
+                        </li>
+                        <!-- Project Item End -->
+
+                        <!-- Project Item Start -->
+                        <li class="project-item active" data-filter-item data-category="indesign">
+                            <a href="https://drive.google.com/drive/folders/1mp1FydY4QrDXXHj3aEPqgoTxhi_flpFu?usp=sharing" target="_blank">
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="navigate-outline"></ion-icon>
+                                    </div>
+                                    <img src="img/project/indesign/[SHINHAN]_ARSR23_Cover.jpg" alt="" loading="lazy">
+                                </figure>
+                                <h3 class="project-title">Cover Shinhan Annual Report 2023</h3>
                                 <p class="project-category">InDesign</p>
                             </a>
                         </li>
