mengubah contract jadi internship pada pengalaman samcgi, menambahkan script currentYear.js, menambahkan footer tahun

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                         <!-- start timeline item -->
                         <li class="timeline-item">
                             <h4 class="h4 timeline-item-title">PT. SAMCGI Indonesia -
-                                <span class="h4 timeline-item-title">Contract</span>
+                                <span class="h4 timeline-item-title">Internship</span>
                             </h4>
                             <span>2023 - 2024 (3 Bulan)</span>
                             
@@ -1156,6 +1156,14 @@
                 </section>
             </article>
             <!-- END CONTACT SECTION -->
+
+            <!-- START FOOTER -->
+            <footer class="content-footer">
+                <p>&copy; 2023 -
+                    <span id="currentYear"></span>
+                </p>
+            </footer>
+            <!-- END FOOTER -->
         </div>
 
         <!-- END MAIN CONTENT -->
@@ -1164,6 +1172,7 @@
 
     <!-- JS CUSTOM -->
     <script src="js/script.js"></script>
+    <script src="js/currentYear.js"></script>
     <!-- JS IONICONS -->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
